// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`marks spinner as success 1`] = `
"[1G[33m⠋[39m #success[1G[33m⠙[39m #success[1G[33m⠹[39m #success[2K[1G[32m✔[39m #success
"
`;

exports[`marks spinner as success with mark 1`] = `
"[1G[33m⠋[39m #success[1G[33m⠙[39m #success[1G[33m⠹[39m #success[2K[1G[32m✔[39m #success
[1G[33m⠋[39m #success[1G[33m⠙[39m #success[1G[33m⠹[39m #success[2K[1G[32m✔[39m Successful

[1G[33m⠋[39m #success[1G[33m⠙[39m #success[1G[33m⠹[39m #success[2K[1G[32m✔[39m #success
"
`;

exports[`marks spinner as success with message 1`] = `
"[1G[33m⠋[39m #success[1G[33m⠙[39m #success[1G[33m⠹[39m #success[2K[1G[32m✔[39m #success
[1G[33m⠋[39m #success[1G[33m⠙[39m #success[1G[33m⠹[39m #success[2K[1G[32m✔[39m Successful

"
`;
